opa/exposed-secret-constraint.yml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sBlockSecretsInEnv
metadata:
  name: block-secrets-in-env
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
