opa/exposed-secret.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sblocksecretsinenv
spec:
  crd:
    spec:
      names:
        kind: K8sBlockSecretsInEnv
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sblocksecretsinenv
        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          env := container.env[_]
          env.valueFrom.secretKeyRef
          msg := "Secrets cannot be exposed directly in environment variables"
        }
