opa/minimum-size-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sMinPvcSize
metadata:
  name: require-min-pvc-size
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["PersistentVolumeClaim"]
