opa/node-port-service-constraint.yml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sBlockPostgresNodePort
metadata:
  name: block-postgres-nodeport
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Service"]
